@@ -13,6 +13,7 @@ May 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
  * libpcsxcore/r3000a.c: Likewise.
  * libpcsxcore/plugins.c: Likewise.
  * libpcsxcore/misc.c: Likewise.
+ * AUTHORS: Updated info.
 
 May 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
